--- a/keepalived.conf
+++ b/keepalived.conf
@@ -5,8 +5,7 @@ global_defs {
 vrrp_script check_script {
       script "/root/check_nginx.sh"
       interval 3
-      rise 3
-      fall 3
+      user root
 }
 
 vrrp_track_process check_nginx {
