--- a/keepalived.conf
+++ b/keepalived.conf
@@ -1,21 +1,12 @@
-global_defs {
-    enable_script_security
-}
-
 vrrp_script check_script {
-      script "/root/check_nginx.sh"
+      script "/home/chistov/check_nginx.sh"
       interval 3
-      user root
 }
 
-vrrp_track_process check_nginx {
-       process "nginx"
-}
-
-vrrp_instance VM1 {
+vrrp_instance VI_1 {
         state MASTER
         interface enp0s3
-        virtual_router_id 225
+        virtual_router_id 25
         priority 255
         advert_int 1
 
@@ -24,6 +15,7 @@ vrrp_instance VM1 {
         }
 
         track_script {
-                check_script
-        }
+                   check_script
+                }
 }
+
